--- a/movie-review/package.json
+++ b/movie-review/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "~11.0.6",
     "@ng-bootstrap/ng-bootstrap": "^8.0.1",
     "bootstrap": "^4.5.0",
+    "jwt-decode": "^3.1.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
